Bug 1744580 - Make the callback of `select_all` signal check `select` argument r=stransky,a=dsmith

https://docs.gtk.org/gtk4/signal.TextView.select-all.html
The callback for `select-all` signal is called for both "Select All" and
"Unselect All".  The callback can distinguish them with `select` argument,
but Gecko has never refer it.  Therefore, Gecko treated "Unselect All"
shortcut keys are "Select All".  However, the standard shortcut key for
"Unselect All", `Ctrl-Shift-a` conflicts with the shortcut key to open
`about:addons` of Firefox, and Gecko does not support "Unselect all"
command.  Therefore, this patch makes the callback refers the argument
and not treat as "Select All" if `FALSE`.

Note that this removes the GTK version check at adding `select_all`
signal handler because the version check is older than current system
requirements.

Differential Revision: https://phabricator.services.mozilla.com/D133182