widget/gtk/NativeKeyBindings.cpp
@@ -201,10 +201,20 @@ static void paste_clipboard_cb(GtkWidget* w, gpointer user_data) {
 }
 
 // GtkTextView-only signals
-static void select_all_cb(GtkWidget* w, gboolean select, gpointer user_data) {
-  AddCommand(Command::SelectAll);
-  g_signal_stop_emission_by_name(w, "select_all");
-  gHandled = true;
+static void select_all_cb(GtkWidget* aWidget, gboolean aSelect,
+                          gpointer aUserData) {
+  // We don't support "Unselect All" command.
+  // Note that if we'd support it, `Ctrl-Shift-a` will be mapped to it and
+  // overrides open `about:addons` shortcut.
+  if (aSelect) {
+    AddCommand(Command::SelectAll);
+  }
+  g_signal_stop_emission_by_name(aWidget, "select_all");
+  // Although we prevent the default of `GtkTExtView` with
+  // `g_signal_stop_emission_by_name`, but `gHandled` is used for asserting
+  // if it does not match with the emptiness of the command array.
+  // Therefore, we should not set it to `true` if we don't add a command.
+  gHandled |= aSelect;
 }
 
 NativeKeyBindings* NativeKeyBindings::sInstanceForSingleLineEditor = nullptr;
@@ -248,15 +258,8 @@ void NativeKeyBindings::Init(NativeKeyBindingsType aType) {
       break;
     default:
       mNativeTarget = gtk_text_view_new();
-      if (gtk_major_version > 2 ||
-          (gtk_major_version == 2 &&
-           (gtk_minor_version > 2 ||
-            (gtk_minor_version == 2 && gtk_micro_version >= 2)))) {
-        // select_all only exists in gtk >= 2.2.2.  Prior to that,
-        // ctrl+a is bound to (move to beginning, select to end).
-        g_signal_connect(mNativeTarget, "select_all", G_CALLBACK(select_all_cb),
-                         this);
-      }
+      g_signal_connect(mNativeTarget, "select_all", G_CALLBACK(select_all_cb),
+                       this);
       break;
   }
 
